<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rescue_Pets</string>
    <string name="app_logo">Rescue Pets Logo</string>
    <string name="welcome_back">Welcome back! Please sign in to continue</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
</resources>